[CELEBORN-131]Notify pull request event to jira.

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -38,3 +38,4 @@ notifications:
   commits: commits@celeborn.apache.org
   issues: issues@celeborn.apache.org
   pullrequests: issues@celeborn.apache.org
+  jira_options: link label worklog
