--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -31,9 +31,10 @@ jobs:
     - uses: actions/setup-java@v2
       name: Setup JDK with Maven
       with:
-         java-version: 8
-         cache: maven
-         check-latest: false
+        distribution: zulu
+        java-version: 8
+        cache: maven
+        check-latest: false
     - name: Build Celeborn Binary
       run:
         ./build/make-distribution.sh --integrationTest -Pspark-3.3 -Pgoogle-mirror
