--- a/integration-test/docker/helm/values.yaml
+++ b/integration-test/docker/helm/values.yaml
@@ -60,3 +60,13 @@ service:
   port: 9097
 
 configmap: celeborn-conf
+
+resources: {}
+
+podAnnotations: {}
+
+affinity: {}
+
+tolerations: []
+
+nodeSelector: {}
