--- a/docker/helm/templates/worker-statefulset.yaml
+++ b/docker/helm/templates/worker-statefulset.yaml
@@ -42,7 +42,7 @@ spec:
         app.kubernetes.io/role: worker
         {{- include "celeborn.selectorLabels" . | nindent 8 }}
     spec:
-      {{- with .Values.affinity }}
+      {{- with .Values.affinity.worker }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
