Upload Failure Log

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,13 @@ jobs:
         check-latest: false
     - name: Test with Maven
       run: build/mvn -Pgoogle-mirror,spark-${{ matrix.spark }} test
+    - name: Upload test log
+      if: failure()
+      uses: actions/upload-artifact@v3
+      with:
+        name: unit-test-log
+        path: |
+          **/target/unit-tests.log
     - name: Upload coverage to Codecov
       if: |
         matrix.java == 8 &&
