--- a/docker/helm/templates/configmap.yaml
+++ b/docker/helm/templates/configmap.yaml
@@ -31,9 +31,9 @@ data:
     {{- end }}
     {{- range $key, $val := .Values.celeborn }}
     {{ $key }}={{ $val }}
-    {{- end -}} 
-    
-  rss-env.sh: |
+    {{- end }}
+
+  celeborn-env.sh: |
     {{- range $key, $val := .Values.environments }}
     {{ $key }}="{{ $val }}"
     {{- end}} 
