--- a/docker/helm/values.yaml
+++ b/docker/helm/values.yaml
@@ -36,27 +36,28 @@ workerReplicas: 5
 # celeborn release version
 celebornVersion: 0.1.1
 
+gid: 10006
+
 # celeborn configurations
 celeborn:
-  # please update celeborn.worker.storage.dirs to disk mount path on k8s node
+  celeborn.ha.master.ratis.raft.server.storage.dir: /mnt/rss_ratis/
   celeborn.worker.storage.dirs: /mnt/disk1,/mnt/disk2,/mnt/disk3,/mnt/disk4
   celeborn.push.replicate.enabled: true
-  celeborn.master.metrics.prometheus.port: 9098
-  celeborn.worker.monitor.disk.enabled: false
-  rss.rpc.io.serverThreads: 64
-  rss.worker.fetch.chunk.size: 8m
-  rss.rpc.io.numConnectionsPerPeer: 2
-  celeborn.worker.flush.buffer.size: 256K
   celeborn.metrics.enabled: true
-  rss.push.io.threads: 32
-  celeborn.worker.fetch.io.threads: 32
-  celeborn.push.stageEnd.timeout: 120s
+  celeborn.master.metrics.prometheus.port: 9098
   celeborn.worker.metrics.prometheus.port: 9096
-  rss.rpc.io.clientThreads: 64
+  celeborn.worker.monitor.disk.enabled: false
+  celeborn.worker.fetch.chunk.size: 8m
+  celeborn.rpc.io.serverThreads: 64
+  celeborn.rpc.io.numConnectionsPerPeer: 2
+  celeborn.rpc.io.clientThreads: 64
+  celeborn.rpc.dispatcher.numThreads: 4
+  celeborn.worker.flush.buffer.size: 256K
+  celeborn.worker.fetch.io.threads: 32
+  celeborn.push.io.threads: 32
+  celeborn.push.stageEnd.timeout: 120s
   celeborn.application.heartbeat.timeout: 120s
-  rss.rpc.dispatcher.numThreads: 4
   celeborn.worker.heartbeat.timeout: 120s
-  celeborn.ha.master.ratis.raft.server.storage.dir: /mnt/rss_ratis/
 
 environments:
   CELEBORN_MASTER_MEMORY: 2g
@@ -64,7 +65,7 @@ environments:
   CELEBORN_WORKER_MEMORY: 2g
   CELEBORN_WORKER_OFFHEAP_MEMORY: 12g
   CELEBORN_WORKER_JAVA_OPTS: "-XX:-PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:gc-worker.out -Dio.netty.leakDetectionLevel=advanced"
-  CELEBORN_NO_DAEMONIZE: "yes"
+  CELEBORN_NO_DAEMONIZE: 1
   TZ: "Asia/Shanghai"
 
 podMonitor:
