--- a/requirements.txt
+++ b/requirements.txt
@@ -15,18 +15,21 @@
 # limitations under the License.
 #
 
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 ghp-import==2.1.0
+idna==3.4
 importlib-metadata==4.12.0
 Jinja2==3.1.2
 Markdown==3.3.7
 MarkupSafe==2.1.1
 mergedeep==1.3.4
-mkdocs==1.3.1
-mkdocs-include-markdown-plugin==3.8.1
+mkdocs==1.4.2
+mkdocs-include-markdown-plugin==4.0.0
 mkdocs-macros-plugin==0.7.0
-mkdocs-material==8.3.9
-mkdocs-material-extensions==1.0.3
+mkdocs-material==8.5.11
+mkdocs-material-extensions==1.1.1
 packaging==21.3
 Pygments==2.12.0
 pymdown-extensions==9.5
@@ -34,7 +37,9 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 PyYAML==6.0
 pyyaml_env_tag==0.1
+requests==2.28.1
 six==1.16.0
 termcolor==1.1.0
+urllib3==1.26.13
 watchdog==2.1.9
 zipp==3.8.1
