--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -42,7 +42,9 @@ jobs:
           java-version: 8
           cache: 'maven'
           check-latest: false
-      - run: build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,spark-3.1
+      - run: |
+          build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,spark-2.4
+          build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,spark-3.3
       - name: Upload rat report
         if: failure()
         uses: actions/upload-artifact@v2
