--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -33,7 +33,10 @@ jobs:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
 
       - name: Build
-        run: ./dev/make-distribution.sh -Pspark-3.2 && rm -rf /home/hadoop/celeborn-toolkit/dist/* && mv apache-celeborn-*.tgz /home/hadoop/celeborn-toolkit/dist/
+        run: |
+          dev/make-distribution.sh -Pspark-3.2
+          rm -rf /home/hadoop/celeborn-toolkit/dist/*
+          mv apache-celeborn-*.tgz /home/hadoop/celeborn-toolkit/dist/
 
       - name: Regression
         run: /home/hadoop/celeborn-toolkit/reg.sh regression
