--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -33,12 +33,6 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
-      matrix:
-        java:
-          - 8
-        spark:
-          - '2.4'
-          - '3.1'
     steps:
       - uses: actions/checkout@v2
       - name: Setup JDK 8
@@ -48,4 +42,6 @@ jobs:
           java-version: 8
           cache: 'maven'
           check-latest: false
-      - run: build/mvn spotless:check -Pgoogle-mirror,spark-${{ matrix.spark }}
+      - run: |
+          build/mvn spotless:check -Pgoogle-mirror,spark-2.4
+          build/mvn spotless:check -Pgoogle-mirror,spark-3.3
