--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -43,6 +43,7 @@ jobs:
           cache: 'maven'
           check-latest: false
       - run: |
+          build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,flink-1.14
           build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,spark-2.4
           build/mvn org.apache.rat:apache-rat-plugin:check -Pgoogle-mirror,spark-3.3
       - name: Upload rat report
