--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,3 +76,35 @@ jobs:
         name: spark-${{ matrix.spark }}-unit-test-log
         path: |
           **/target/unit-tests.log
+
+  flink:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        java:
+          - 8
+        flink:
+          - '1.14'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v2
+        with:
+          distribution: zulu
+          java-version: ${{ matrix.java }}
+          cache: maven
+          check-latest: false
+      - name: Test with Maven
+        run: |
+          PROFILES="-Pgoogle-mirror,flink-${{ matrix.flink }}"
+          TEST_MODULES="client-flink/common,client-flink/flink-${{ matrix.flink }},client-flink/flink-${{ matrix.flink }}-shaded"
+          build/mvn $PROFILES -pl $TEST_MODULES -am clean install -DskipTests
+          build/mvn $PROFILES -pl $TEST_MODULES test
+      - name: Upload test log
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: flink-${{ matrix.flink }}-unit-test-log
+          path: |
+            **/target/unit-tests.log
