--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -43,5 +43,6 @@ jobs:
           cache: 'maven'
           check-latest: false
       - run: |
+          build/mvn spotless:check -Pgoogle-mirror,flink-1.14
           build/mvn spotless:check -Pgoogle-mirror,spark-2.4
           build/mvn spotless:check -Pgoogle-mirror,spark-3.3
