--- a/client-flink/common/pom.xml
+++ b/client-flink/common/pom.xml
@@ -24,7 +24,7 @@
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
-  <artifactId>celeborn-client-flink-common-${flink.binary.version}_${scala.binary.version}</artifactId>
+  <artifactId>celeborn-client-flink-common_${scala.binary.version}</artifactId>
   <packaging>jar</packaging>
   <name>Celeborn Client for Flink Common</name>
 
