--- a/client-flink/flink-1.14/pom.xml
+++ b/client-flink/flink-1.14/pom.xml
@@ -24,7 +24,7 @@
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
-  <artifactId>celeborn-client-flink-${flink.binary.version}_${scala.binary.version}</artifactId>
+  <artifactId>celeborn-client-flink-1.14_${scala.binary.version}</artifactId>
   <packaging>jar</packaging>
   <name>Celeborn Client for Flink 1.14</name>
 
@@ -41,7 +41,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
-      <artifactId>celeborn-client-flink-common-${flink.binary.version}_${scala.binary.version}</artifactId>
+      <artifactId>celeborn-client-flink-common_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
