--- a/integration-test/docker/helm/values.yaml
+++ b/integration-test/docker/helm/values.yaml
@@ -50,7 +50,8 @@ environments:
   CELEBORN_WORKER_MEMORY: 2g
   CELEBORN_WORKER_OFFHEAP_MEMORY: 2g
   CELEBORN_NO_DAEMONIZE: "yes"
-  TZ: "Asia/Shanghai"
+  # To align with the timezone settings in RssFunSuite
+  TZ: "America/Los_Angeles"
 
 podMonitor:
   enable: false
