--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -48,7 +48,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: integration-test/docker/Dockerfile
+        file: ./tests/kubernetes-it/docker/Dockerfile
         load: true
         tags: apache/celeborn:latest
     - name: Setup Helm
@@ -61,7 +61,7 @@ jobs:
         minikube version: 'v1.25.2'
         kubernetes version: 'v1.23.3'
     - name: Deploy Celeborn In Single Mode
-      run: helm install celeborn docker/helm -f ./integration-test/docker/helm/values.yaml
+      run: helm install celeborn docker/helm -f ./tests/kubernetes-it/docker/values.yaml
     - name: Check Celeborn Release And Pods
       run: |
         sleep 300
