--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -48,7 +48,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./tests/kubernetes-it/docker/Dockerfile
+        file: ./docker/Dockerfile
         load: true
         tags: apache/celeborn:latest
     - name: Setup Helm
