--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <module>service</module>
     <module>master</module>
     <module>worker</module>
-    <module>integration-test/kubernetes-it</module>
+    <module>tests/kubernetes-it</module>
   </modules>
 
   <distributionManagement>
