using dist as context

--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -47,7 +47,7 @@ jobs:
     - name: Build Celeborn Docker Image
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./dist
         file: ./docker/Dockerfile
         load: true
         tags: apache/celeborn:latest
