--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -46,3 +46,4 @@ jobs:
           build/mvn spotless:check -Pgoogle-mirror,flink-1.14
           build/mvn spotless:check -Pgoogle-mirror,spark-2.4
           build/mvn spotless:check -Pgoogle-mirror,spark-3.3
+          build/mvn spotless:check -Pgoogle-mirror,kubernetes-it
