--- a/tests/kubernetes-it/pom.xml
+++ b/tests/kubernetes-it/pom.xml
@@ -43,6 +43,10 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.fabric8</groupId>
+      <artifactId>kubernetes-client</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
