[CELEBORN-193][FOLLOWUP] exclude images and remove unnecessary attributes file.

--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,7 @@ LICENSE-binary export-ignore
 NOTICE-binary export-ignore
 assets/slides/* export-ignore
 assets/diagram/* export-ignore
+assets/img/* export-ignore
 *.bat text eol=crlf
 *.cmd text eol=crlf
 *.java text eol=lf
