--- a/docker/helm/templates/worker-service.yaml
+++ b/docker/helm/templates/worker-service.yaml
@@ -20,11 +20,17 @@ kind: Service
 metadata:
   name: celeborn-worker-svc
   labels:
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    app.kubernetes.io/name: {{ .Chart.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: {{ .Values.image.tag | default .Chart.AppVersion | quote }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
     {{- include "celeborn.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   clusterIP: None
   selector:
-    {{- include "celeborn.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/name: celeborn-worker
+    app.kubernetes.io/name: {{ .Chart.Name }}
+    app.kubernetes.io/version: {{ .Values.image.tag | default .Chart.AppVersion | quote }}
     app.kubernetes.io/role: worker
+    {{- include "celeborn.selectorLabels" . | nindent 4 }}
