--- a/docker/helm/templates/worker-statefulset.yaml
+++ b/docker/helm/templates/worker-statefulset.yaml
@@ -20,13 +20,19 @@ kind: StatefulSet
 metadata:
   name: celeborn-worker
   labels:
-    app.kubernetes.io/name: celeborn-worker
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    app.kubernetes.io/name: {{ .Chart.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: {{ .Values.image.tag | default .Chart.AppVersion | quote }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/role: worker
     {{- include "celeborn.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: celeborn-worker
+      app.kubernetes.io/name: {{ .Chart.Name }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
+      app.kubernetes.io/version: {{ .Values.image.tag | default .Chart.AppVersion | quote }}
       app.kubernetes.io/role: worker
       {{- include "celeborn.selectorLabels" . | nindent 6 }}
   serviceName: celeborn-worker
@@ -38,7 +44,9 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        app.kubernetes.io/name: celeborn-worker
+        app.kubernetes.io/name: {{ .Chart.Name }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/version: {{ .Values.image.tag | default .Chart.AppVersion | quote }}
         app.kubernetes.io/role: worker
         {{- include "celeborn.selectorLabels" . | nindent 8 }}
     spec:
