--- a/pom.xml
+++ b/pom.xml
@@ -1012,6 +1012,23 @@
     </profile>
 
     <profile>
+      <id>jdk-8</id>
+      <properties>
+        <java.version>8</java.version>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>jdk-11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <properties>
+        <java.version>11</java.version>
+      </properties>
+    </profile>
+
+    <profile>
       <id>flink-1.14</id>
       <modules>
         <module>client-flink/common</module>
