--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,16 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
+        <version>${flink.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-clients_${scala.binary.version}</artifactId>
+        <version>${flink.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jul-to-slf4j</artifactId>
         <version>${slf4j.version}</version>
@@ -1034,6 +1044,7 @@
         <module>client-flink/common</module>
         <module>client-flink/flink-1.14</module>
         <module>client-flink/flink-1.14-shaded</module>
+        <module>tests/flink-it</module>
       </modules>
       <properties>
         <flink.version>1.14.6</flink.version>
