--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
         <version>${flink.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-runtime-web_${scala.binary.version}</artifactId>
+        <version>${flink.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jul-to-slf4j</artifactId>
         <version>${slf4j.version}</version>
