--- a/pom.xml
+++ b/pom.xml
@@ -847,7 +847,7 @@
             <execution>
               <id>report</id>
               <goals>
-                <goal>report</goal>
+                <goal>report-aggregate</goal>
               </goals>
               <phase>test</phase>
               <configuration>
