[CELEBORN-298] fix the wrong configuration name in readme and conf.template

--- a/conf/celeborn-defaults.conf.template
+++ b/conf/celeborn-defaults.conf.template
@@ -22,7 +22,7 @@ celeborn.rpc.io.serverThreads                    8
 celeborn.rpc.io.numConnectionsPerPeer            2
 
 celeborn.push.io.numConnectionsPerPeer           2
-celeborn.push.io.threads                         8
+celeborn.worker.push.io.threads                  8
 
 celeborn.push.replicate.enabled                  true
 
