[CELEBORN-310] with RoaringBitmap artifactId

--- a/client-flink/flink-1.14-shaded/pom.xml
+++ b/client-flink/flink-1.14-shaded/pom.xml
@@ -71,7 +71,7 @@
               <include>com.google.guava:guava</include>
               <include>io.netty:*</include>
               <include>org.apache.commons:commons-lang3</include>
-              <include>org.roaringbitmap</include>
+              <include>org.roaringbitmap:RoaringBitmap</include>
             </includes>
           </artifactSet>
           <filters>
