--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
   <modules>
     <module>common</module>
+    <module>common-shade</module>
     <module>client</module>
     <module>service</module>
     <module>master</module>
