--- a/master/pom.xml
+++ b/master/pom.xml
@@ -71,6 +71,10 @@
       <artifactId>ratis-grpc</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.ratis</groupId>
+      <artifactId>ratis-shell</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
     </dependency>
