--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,12 @@
         <groupId>org.apache.ratis</groupId>
         <artifactId>ratis-shell</artifactId>
         <version>${ratis.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.scala-lang</groupId>
