[CELEBORN-375][INFRA] Enable CI on branch-*

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,13 @@ name: Celeborn CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - branch-*
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - branch-*
 
 jobs:
   service:
