[CELEBORN-280] Enable Jacoco multi-module mode to collect coverage report. (#1215)

--- a/pom.xml
+++ b/pom.xml
@@ -873,7 +873,7 @@
             <execution>
               <id>report</id>
               <goals>
-                <goal>report</goal>
+                <goal>report-aggregate</goal>
               </goals>
               <phase>test</phase>
               <configuration>
