--- a/master/pom.xml
+++ b/master/pom.xml
@@ -96,7 +96,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-common</artifactId>
+      <artifactId>hadoop-client-api</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
